upgrade trtllm from 0.9 to 0.13.0.dev2024082700

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,10 @@ data/
 onnxs_data/
 test/
 engines/
-results_planning_only/
-results_planning_only_*/
-deploy/llm_lib/llm_checkpoint/
-deploy/llm_lib/llm_engine/
-deploy/llm_lib/llm_safetensor/
+results_planning_only*/
+deploy/llm_lib/llm_checkpoint*/
+deploy/llm_lib/llm_engine*/
+deploy/llm_lib/llm_safetensor*/
 
 .vscode
 *.ignore
