--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 **__pycache__**
 ckpts/
 data/
-# onnxs/
+onnxs/
 onnxs_data/
 test/
 engines/
+hide/
 results_planning_only*/
 deploy/llm_lib/llm_checkpoint*/
 deploy/llm_lib/llm_engine*/
@@ -12,10 +13,9 @@ deploy/llm_lib/llm_safetensor*/
 
 .vscode
 *.ignore
-# *.onnx
+*.onnx
 *.engine
 *.nsys-rep
 *.tmp
 *.log
 *.pyc
-./data
